<resources>
    <string name="app_name" translatable="false">Psyche</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="edit">Edit Profile</string>
    <string name="hello">Hello, </string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="languageValue">English</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="ask_register">Dont have an accout? Register</string>
    <string name="ask_login">Already have an account? Login</string>
    <string name="here">here</string>
    <string name="confirm_your_password">Retype your password again</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="your_mental_health">Your Mental Health</string>
    <string name="prediction">Prediction:</string>
    <string name="interest">Interest:</string>
    <string name="concentration">Concentration:</string>
    <string name="fatigue">Fatigue:</string>
    <string name="sleep">Sleep:</string>
    <string name="not_at_all">Not at all</string>
    <string name="sometimes">Sometimes</string>
    <string name="rarely">Rarely</string>
    <string name="often">Often</string>
    <string name="always">Always</string>
    <string name="never">Never</string>
    <string name="settings">Settings</string>
    <string name="nearby">Nearby</string>
    <string name="history">History</string>
    <string name="home">Home</string>
</resources>